# Virtual-Wardrobe-Assistant

./: .gitignore  CMakeLists.txt  README.md  user_profile.txt  virtual_wardrobe_qt.pro  viva_script.md  wardrobe_data.txt
build-qt-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build-qt-cmake/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
include/: ClothingItem.h  FileManager.h  RecommendationEngine.h  UserProfile.h  VirtualWardrobeApp.h  WardrobeManager.h
qt/: MainWindow.cpp  MainWindow.h  main.cpp
src/: ClothingItem.cpp  FileManager.cpp  RecommendationEngine.cpp  UserProfile.cpp  VirtualWardrobeApp.cpp  WardrobeManager.cpp  main.cpp
